fix(button): Reduce outline contrast in outlined variant

--- a/src/components/button/_button.scss
+++ b/src/components/button/_button.scss
@@ -98,7 +98,7 @@ $_sizes: (
     border-radius: inherit;
     border: 1px solid currentcolor;
     box-sizing: border-box;
-    opacity: 0.32;
+    opacity: 0.2;
     pointer-events: none;
     @include utils.absolute-fill();
   }
